| Bug #43042 | backup_id is not handled correctly larger than 65535 | ||
|---|---|---|---|
| Submitted: | 20 Feb 5:27 | Modified: | 20 Feb 12:19 |
| Reporter: | Mikiya Okuno | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 6.3.20 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[20 Feb 5:27]
Mikiya Okuno
[20 Feb 7:05]
Jonas Oreland
can you check if this is a duplicate of bug#41031 which I fixed yesterday (i.e not yet released)
[20 Feb 9:25]
Mikiya Okuno
Jonas, I confirmed that the "Problem 1" is fixed in the current 6.3 tree. However, the "Problem 2" is remaining still. I guess some part which decides a backup dir name has %d instead of %u in sprintf like functions. Kind regards, Mikiya
[20 Feb 9:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66991 2849 Jonas Oreland 2009-02-20 ndb - bug#43042 - fix %d/%u handling wrt backup-id
[20 Feb 9:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66992 2849 Jonas Oreland 2009-02-20 ndb - bug#43042 - fix %d/%u handling wrt backup-id
[20 Feb 9:54]
Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:jonas@mysql.com-20090220085122-wtwo4vj5fyelk4mn) (version source revid:jonas@mysql.com-20090220085122-wtwo4vj5fyelk4mn) (merge vers: 5.1.32-ndb-6.3.23) (pib:6)
[20 Feb 9:55]
Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:jonas@mysql.com-20090220085344-ymjrn5kc4rgi3b15) (version source revid:jonas@mysql.com-20090220085344-ymjrn5kc4rgi3b15) (merge vers: 5.1.32-ndb-6.4.3) (pib:6)
[20 Feb 9:56]
Jonas Oreland
docs: Fixed various printouts that caused backup id >= 2^31 to be printed as a negative number
[20 Feb 9:56]
Bugs System
Pushed into 5.1.32-ndb-6.2.17 (revid:jonas@mysql.com-20090220084610-zfheg4ipg83vbz9b) (version source revid:jonas@mysql.com-20090220084610-zfheg4ipg83vbz9b) (merge vers: 5.1.32-ndb-6.2.17) (pib:6)
[20 Feb 12:19]
Jon Stephens
Documented in the NDB-6.2.17, 6.3.23, and 6.4.3 changelogs as follows:
Backup IDs greater than 2³¹ were not handled correctly, causing
negative values to be used in backup directory names and
printouts.
