ndb - bug#43042 - fix %d/%u handling wrt backup-id